# Amor_CMPF

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_windows.bat  requirements.txt
doc/AI/skill/: 编译CMPF工程.md
doc/代码规范/: cpp_style_guide.md  cpp_style_guide.txt
doc/设计框架/: 项目总架构.md
include/: amor.h
include/config/: cmpf_config.h
include/core/: amor_core.h  cmpf_core.h
include/log/: amor_log.h  cmpf_log.h
include/memory/: amor_memory.h  cmpf_memory.h
include/process/: amor_process.h  cmpf_process.h
include/shared_memory/: amor_shared_memory.h  cmpf_shared_memory.h
include/utils/: amor_utils.h  cmpf_utils.h
include/utils/config/: cmpf_config.h
include/utils/log/: cmpf_log.h
include/utils/shm/: cmpf_shm.h
main/: CMakeLists.txt
main/manager/: CMakeLists.txt  main.cpp
main/worker/: CMakeLists.txt
scripts/: cmpf.conf  cmpf_manager.service  cmpf_worker.target  cmpf_worker@.service  start_service.sh
src/config/: CMakeLists.txt  cmpf_config.cpp
src/core/: CMakeLists.txt  amor_core.cpp  cmpf_core.cpp  cmpf_core_module.cpp  cmpf_core_module.h
src/log/: CMakeLists.txt  amor_log.cpp  cmpf_log.cpp
src/main/: CMakeLists.txt
src/main/cmpf_main/: CMakeLists.txt  main.cpp
src/main/manager/: CMakeLists.txt  main.cpp
src/main/worker/: CMakeLists.txt  main.cpp
src/manager/: CMakeLists.txt  cmpf_manager.cpp
src/memory/: CMakeLists.txt  amor_memory.cpp  cmpf_memory.cpp
src/process/: CMakeLists.txt  amor_process.cpp  cmpf_process.cpp
src/shared_memory/: CMakeLists.txt  amor_shared_memory.cpp  cmpf_shared_memory.cpp
src/utils/: CMakeLists.txt  amor_utils.cpp  cmpf_utils.cpp
src/utils/config/: cmpf_config.cpp
src/utils/log/: cmpf_log.cpp
src/utils/shm/: cmpf_shm.cpp
src/worker/: CMakeLists.txt  cmpf_worker.cpp
